# ffmpeg-service

./: .gitignore  Dockerfile  README.md  SETUP_GITHUB.md  app.py  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-build.yaml  docker-build.yml
