[project]
name = "ffmpeg-service"
version = "0.2.0"
description = "FFmpeg media converter API for audio, video and image files"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "httpx==0.27.2",
    "python-multipart==0.0.9"
]
